--- a/style.css
+++ b/style.css
@@ -1,6 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
+:root{
+    --black: #212121;
+    --dark: #282828;
+    --light: #FBFBFB;
+    --light-green: #A2F6B9;
+    --light-blue: #10CFE9;
+    --dark-grey: #868686;
+    --light-grey: #C4C4C4;
+
+}
+
 body{
     box-sizing: border-box;
     margin: 0;
@@ -17,13 +28,12 @@ body{
 }
 
 .logo {
-    padding: 1em 3em;
+    padding: 0.5em 2em;
     background-color: #F3FF6E;
     color: #000;
     border-radius: .5em;
-    margin: 1.5em;
+    margin: 2em;
     font-family: 'Kanit', sans-serif;
-    font-size: 1.1m;
 }
 
 .links {
@@ -39,9 +49,75 @@ body{
     border-radius: 10px;
 }
 
+.content-section {
+    position: relative;
+}
+
+.content-container {
+    background-color: #282828;
+    position: absolute;
+    color: var(--light);
+    width: 35em;
+}
+
+.content-heading{
+    display: inline-block;
+    height: auto;
+    width: 180px;
+    left: 0.5em;
+    background-color: var(--dark-grey);
+    margin: 1em 1em;
+    padding: 0;
+}
+.lorem-content {
+    background-color: var(--light-grey);
+    padding: 0 1em;
+    margin: 1em 1em;
+}
+
+.items1, .items2, .items3 {
+    /* display: inline-block; */
+    background-color: var(--light-green);
+    color: #212121;
+    margin: .5em;
+    padding: .5em;
+    border-radius: 10px;
+}
+
+.eclipse {
+    background-color: var(--dark);
+    right: 0;
+    width: 100%;
+
+}
 
 
 
 
+@media screen and (max-width: 800px) {
+    .logo {
+        padding: 1em 1.5em;
+        margin: 1em;
+        font-size: 1em;
+        }
+
+        .content-container {
+            width: auto;
+        }
+}
 
 
+@media screen and (max-width:550px) {
+    .links {
+        display:none;
+    }
+
+    .logo {
+    font-size: 0.7em;
+    }
+
+    .content-container {
+        width: auto;
+    }
+
+}
