--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body{
     background-color: var(--light-grey);
 }
 
+/* navbar */
 .navbar-container {
     background-color: #000;
     color: #fff;
@@ -37,6 +38,10 @@ body{
     border-radius: .5em;
     margin: 2em;
     font-family: 'Kanit', sans-serif;
+}
+
+.nav-bars {
+	display: none;
 }
 
 .links {
@@ -85,7 +90,7 @@ body{
 
 .lorem-content {
     background-color: var(--light-grey);
-    padding: 2em;
+    padding: 1rem;
     margin: -0.7em 1rem;
     border-radius: .6em;
     margin-right: 6rem;
@@ -132,7 +137,7 @@ body{
 /* message section */
 
 .input-container {
-	margin: .7rem;
+	margin: 3rem 1rem;
 	background-color: var(--light-white);
 	height: 35rem;
 	width: 22rem;
@@ -148,11 +153,6 @@ input {
 	background-color: rgba(0,0,0,0)
 }
 
-input ::placeholder{
-	text-align: left;
-	margin-right: 1em;
-}
-
 .input-container input, textarea{
 	margin: 2rem 1rem;
 	width:85%;
@@ -162,10 +162,6 @@ input ::placeholder{
 .input-container h4{
 	margin: 0 1em;
 	padding: 0;
-}
-
-.input-container [placeholder] {
-	 
 }
 
 .input-container textarea {
@@ -186,21 +182,19 @@ input ::placeholder{
 
 /* green section */
 .green-area {
-	height: 7rem;
+	height: 5rem;
 	margin: 1rem;
 	background-color: var(--light-green);
 	border: 2px solid black;
 	border-radius: .6em;
-	diaplay: flex;
+	display: flex;
 	justify-content: space-between;
- 
 }
 
 /* font awesome icons */
-.green-area i {
-	font-size: 4rem;
-    justify-content: space-between;
-    margin: 2rem 7rem;
+.green-area span {
+	font-size: 3rem;
+	margin: 1rem 2rem;
 }
 
 @media screen and (max-width: 900px) {
@@ -219,23 +213,54 @@ input ::placeholder{
 			margin: 1rem;
 	}
 	
-	.green-area i {
-	font-size: 4rem;
+	.green-area span {
+	font-size: 2rem;
     justify-content: space-between;
-    margin: 2rem 6rem;
+    margin: 1rem;
 	}
 }
 
 
 @media screen and (max-width:650px) {
-    .links {
-        display:none;
-    }
 
     .logo {
     font-size: 0.7em;
     }
 
+/* Bars */
+	.nav-bars { 
+	display: flex;
+	right: 1rem;
+	position: absolute;
+	font-size: 1.5rem;
+	margin: 1rem;
+	z-index:1;
+	}
+	
+/* navbar container */
+	.navbar-container {
+		flex-direction: column;
+	}
+
+	.navbar-container .logo {
+		width: 2rem;
+	}	
+	
+/* items */
+	.links {
+		display: none;
+    }
+    .links.shows {
+    	display: flex;
+		flex-direction: column;
+		align-items: center;
+    }
+    
+	.items1, .items2, .items3 {
+
+		align-items: center;
+	}
+	
     .content-container {
         width: auto;
     }
@@ -244,11 +269,5 @@ input ::placeholder{
 		position: static;
 		width: auto;
 		margin: 1rem;
-	}
-	
-	.green-area i {
-	font-size: 4rem;
-    justify-content: space-between;
-    margin: 2rem 2.1rem;
 	}
 }
