--- a/lorem5/lorem5App/templates/index.html
+++ b/lorem5/lorem5App/templates/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lorem-project-Home</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
 <body>
@@ -29,12 +29,15 @@
                 </svg>
         </div>
         <div class="input-container">
-			<input type="text" placeholder="Name"></br>
-			<input type="email" placeholder="Email"></br>
+        <form method='post'>
+        	{% csrf_token %}
+			<input name = 'Name' type="text" placeholder="Name"></br>
+			<input name = 'Email' type="email" placeholder="Email"></br>
 			<h4>Your message</h4>
-			<textarea type="text-area">
+			<textarea name = 'Message' type="text-area">
 			</textarea>
 			<button type="submit" class"send-button">Send</button>
+			</form>
 	</div>
 
     </section>
@@ -57,13 +60,13 @@
 	<section class="grees-section">
 		<div class="green-area">
 			<span class="icon"><i class="fab fa-html5"></i></span>
-			<span class="icon"><i class="fas fa-random"></i></span>			
+			<span class="icon"><i class="fab fa-js-square"></i></span>			
 			<span class="icon"><i class="fab fa-css3"></i></span>
 		</div>
 	</section>
     
     <!-- javascript -->
  <!--   <script src="http://100.69.165.58:8080/target/target-script-min.js#anonymous"></script>  -->
-    <script src="script.js"></script>
+    <script src="static/script.js"></script>
 </body>
 </html>
