--- a/lorem5/lorem5App/templates/index.html
+++ b/lorem5/lorem5App/templates/index.html
@@ -57,7 +57,7 @@
 		</div>  
 	</section>
 
-	<section class="grees-section">
+	<section class="green-section">
 		<div class="green-area">
 			<span class="icon"><i class="fab fa-html5"></i></span>
 			<span class="icon"><i class="fab fa-js-square"></i></span>			
