--- a/lorem5/lorem5App/templates/index.html
+++ b/lorem5/lorem5App/templates/index.html
@@ -38,7 +38,7 @@
 			<h4>Your message</h4>
 			<textarea name = 'Message' type="text-area">
 			</textarea>
-			<button type="submit" class"send-button">Send</button>
+			<button type="submit" class="send-button">Send</button>
 			</form>
 	</div>
 
